--- a/TiendaVirtual_SOA/src/app/register/register.component.html
+++ b/TiendaVirtual_SOA/src/app/register/register.component.html
@@ -1,4 +1,5 @@
-<body>
+<app-navbar></app-navbar>
+<section>
 <div class="register-container">
     <div class="register-box">
         <h2>Registro</h2>
@@ -17,4 +18,4 @@
         <p>¿Ya tienes una cuenta? <a href="/login">Inicia sesión</a></p>
     </div>
 </div>
-</body>
+</section>
