--- a/TiendaVirtual_SOA/src/app/login/login.component.css
+++ b/TiendaVirtual_SOA/src/app/login/login.component.css
@@ -4,8 +4,8 @@
     box-sizing: border-box;
     font-family: Arial, sans-serif;
 }
-body {
-    background: linear-gradient(to bottom, #4facfe, #ffffff);
+section {
+    background: linear-gradient(to bottom, #F8F9FA, #4facfe);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,7 +24,7 @@ body {
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-    width: 350px;
+    width: 450px;
     text-align: center;
 }
 
