GTS-7-Crear-servicio-de-autenticación-en-Angular-con-Firebase-Authentication

--- a/TiendaVirtual_SOA/src/app/login/login.component.css
+++ b/TiendaVirtual_SOA/src/app/login/login.component.css
@@ -127,3 +127,10 @@ section {
 .link:hover {
     text-decoration: underline;
 }
+
+.google-img {
+  width: 20px;
+  height: 20px;
+  margin-right: 8px;
+  vertical-align: middle;
+}
