--- a/TiendaVirtual_SOA/src/app/register/register.component.css
+++ b/TiendaVirtual_SOA/src/app/register/register.component.css
@@ -132,3 +132,9 @@ label {
 .register-container a:hover {
     text-decoration: underline;
 }
+.google-img {
+  width: 20px;
+  height: 20px;
+  margin-right: 8px;
+  vertical-align: middle;
+}
