--- a/TiendaVirtual_SOA/src/app/login/login.component.html
+++ b/TiendaVirtual_SOA/src/app/login/login.component.html
@@ -36,7 +36,10 @@
                     Iniciar sesión con Google
                 </button>
             </form>
-            <a href="#" class="link">¿Olvidaste tu contraseña?</a>
+            <a (click)="goToForgotPassword()" class="forgot-password">¿Olvidaste tu contraseña?</a>
+
+
+
         </div>
     </div>    
 </section>
