--- a/TiendaVirtual_SOA/src/app/login/login.component.html
+++ b/TiendaVirtual_SOA/src/app/login/login.component.html
@@ -35,6 +35,7 @@
                     <img src="/google.svg" alt="Google Icon" class="google-img">
                     Iniciar sesión con Google
                 </button>
+                <app-login-with-git class=""></app-login-with-git>
             </form>
             <a (click)="goToForgotPassword()" class="forgot-password">¿Olvidaste tu contraseña?</a>
 
