--- a/TiendaVirtual_SOA/src/app/register/register.component.html
+++ b/TiendaVirtual_SOA/src/app/register/register.component.html
@@ -32,6 +32,7 @@
                 <img src="/google.svg" alt="Google Icon" class="google-img">
                 Registrarse con Google
             </button>
+            <app-login-with-git></app-login-with-git>
         </form>
         <p>¿Ya tienes una cuenta? <a href="/login">Inicia sesión</a></p>
     </div>
