--- a/TiendaVirtual_SOA/src/app/login/login.component.html
+++ b/TiendaVirtual_SOA/src/app/login/login.component.html
@@ -31,10 +31,7 @@
 
                 
                 <button type="submit" class="login-btn" [disabled]="loginForm.invalid">Ingresar</button>
-                <button type="button" class="login-btn mt-3" (click)="loginWithGoogle()">
-                    <img src="/google.svg" alt="Google Icon" class="google-img">
-                    Iniciar sesión con Google
-                </button>
+                <app-login-with-google></app-login-with-google>
                 <app-login-with-git class=""></app-login-with-git>
             </form>
             <a (click)="goToForgotPassword()" class="forgot-password">¿Olvidaste tu contraseña?</a>
