--- a/TiendaVirtual_SOA/src/app/register/register.component.html
+++ b/TiendaVirtual_SOA/src/app/register/register.component.html
@@ -28,10 +28,7 @@
             </div>
 
             <button type="submit" class="register-btn" [disabled]="registerForm.invalid">Registrarse</button>
-            <button type="button" class="register-btn mt-3" (click)="loginWithGoogle()">
-                <img src="/google.svg" alt="Google Icon" class="google-img">
-                Registrarse con Google
-            </button>
+            <app-login-with-google></app-login-with-google>
             <app-login-with-git></app-login-with-git>
         </form>
         <p>¿Ya tienes una cuenta? <a href="/login">Inicia sesión</a></p>
