GTS-27-Crear-servicio-de-autenticacion-en-Angular-con-Facebook

--- a/TiendaVirtual_SOA/src/app/forgot-password/forgot-password.component.html
+++ b/TiendaVirtual_SOA/src/app/forgot-password/forgot-password.component.html
@@ -14,3 +14,34 @@
       <p *ngIf="mensaje" class="message">{{ mensaje }}</p>
   </div>
 </section>
+
+<!-- 
+🔹 [formGroup]="forgotPasswordForm"
+
+Está enlazando el formulario HTML con el formulario reactivo en TypeScript (forgotPasswordForm).
+
+formGroup es una directiva de Angular Forms que permite manejar formularios desde el TypeScript.
+
+🔹 (ngSubmit)="enviarFormulario()"
+
+Cuando el usuario presiona el botón de envío, se ejecuta la función enviarFormulario() en el TypeScript.
+
+ngSubmit es un evento que se activa cuando se envía el formulario. 
+
+
+
+
+🔹 type="submit"
+
+Este botón enviará el formulario cuando se presione.
+
+🔹 [disabled]="forgotPasswordForm.invalid"
+
+Desactiva el botón si el formulario no es válido (invalid).
+
+Es una propiedad vinculada a forgotPasswordForm en TypeScript.
+
+Si el usuario no ha ingresado un correo válido, el botón se desactiva automáticamente.
+
+
+-->
