--- a/TiendaVirtual_SOA/src/app/login/login.component.html
+++ b/TiendaVirtual_SOA/src/app/login/login.component.html
@@ -33,6 +33,7 @@
                 <button type="submit" class="login-btn" [disabled]="loginForm.invalid">Ingresar</button>
                 <app-login-with-google></app-login-with-google>
                 <app-login-with-git class=""></app-login-with-git>
+                <app-login-with-facebook></app-login-with-facebook>
             </form>
             <a (click)="goToForgotPassword()" class="forgot-password">¿Olvidaste tu contraseña?</a>
 
