--- a/TiendaVirtual_SOA/src/app/register/register.component.html
+++ b/TiendaVirtual_SOA/src/app/register/register.component.html
@@ -30,6 +30,7 @@
             <button type="submit" class="register-btn" [disabled]="registerForm.invalid">Registrarse</button>
             <app-login-with-google></app-login-with-google>
             <app-login-with-git></app-login-with-git>
+            <app-login-with-facebook></app-login-with-facebook>
         </form>
         <p>¿Ya tienes una cuenta? <a href="/login">Inicia sesión</a></p>
     </div>
