--- a/TiendaVirtual_SOA/src/app/login-with-google/login-with-google.component.html
+++ b/TiendaVirtual_SOA/src/app/login-with-google/login-with-google.component.html
@@ -1,4 +1,4 @@
 <button type="button" class="button" (click)="loginWithGoogle()">
     <img src="/google.svg" alt="Google Icon" class="google-img">
-    Iniciar sesión con Google
+    Continua con Google
 </button>
