--- a/TiendaVirtual_SOA/src/app/navbar/navbar.component.html
+++ b/TiendaVirtual_SOA/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <a class="navbar-brand px-3" href="">
             <img src="/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-            SporTools
+            SporTTools
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
@@ -12,13 +12,19 @@
                 <li class="nav-item active">
                     <a class="nav-link px-3" routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a>
                 </li>
+                <li class="nav-item active" *ngIf="isLoggedIn$ | async">
+                    <a class="nav-link px-3" routerLink="/dashboard" routerLinkActive="active" ariaCurrentWhenActive="page">Dashboard</a>
+                </li>
             </ul>
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="!(isLoggedIn$ | async)">
                     <a class="nav-link px-3" routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page" >Login</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="!(isLoggedIn$ | async)">
                     <a class="nav-link px-3" routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">Register</a>
+                </li>
+                <li class="nav-item" *ngIf="isLoggedIn$ | async">
+                    <a class="nav-link px-3" routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">Cerrar Sesion</a>
                 </li>
             </ul>
         </div>
