GTS-24-Cambiar-estado-al-iniciar-sesión

--- a/TiendaVirtual_SOA/src/app/dashboard/components/header/header.component.html
+++ b/TiendaVirtual_SOA/src/app/dashboard/components/header/header.component.html
@@ -23,7 +23,7 @@
             <i class="fas fa-cog"></i> Configuración
           </a>
           <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item">
+          <a href="#" class="dropdown-item" routerLink="/register" (click)="logout()">
             <i class="fas fa-sign-out-alt"></i> Cerrar sesión
           </a>
         </div>
