--- a/TiendaVirtual_SOA/src/app/navbar/navbar.component.html
+++ b/TiendaVirtual_SOA/src/app/navbar/navbar.component.html
@@ -23,8 +23,8 @@
                 <li class="nav-item" *ngIf="!(isLoggedIn$ | async)">
                     <a class="nav-link px-3" routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">Register</a>
                 </li>
-                <li class="nav-item" *ngIf="isLoggedIn$ | async">
-                    <a class="nav-link px-3" routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">Cerrar Sesion</a>
+                <li class="nav-item" *ngIf="isLoggedIn$ | async" >
+                    <a class="nav-link px-3" routerLink="/register" (click)="logout()" routerLinkActive="active" ariaCurrentWhenActive="page">Cerrar Sesion</a>
                 </li>
             </ul>
         </div>
