--- a/TiendaVirtual_SOA/src/app/home/home.component.html
+++ b/TiendaVirtual_SOA/src/app/home/home.component.html
@@ -21,3 +21,23 @@
   </div>
 </div>
 
+<div>
+  <h2 class="text-center mt-5">Nuestros Productos</h2>
+  <!-- <div class="container mt-4">
+    <div class="row">
+      <div class="col-md-4 mb-4" *ngFor="let product of products">
+        <div class="card h-100 shadow text-center">
+          <img [src]="product.imageUrl" class="card-img-top" alt="{{ product.name }}" style="height: 200px; object-fit: cover;">
+          <div class="card-body">
+            <h5 class="card-title">{{ product.name }}</h5>
+            <p class="card-text text-success fw-bold">\${{ product.price }}</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> -->
+  <div>
+    <app-product-list></app-product-list>
+  </div>
+</div>
+
