--- a/TiendaVirtual_SOA/src/app/dashboard/components/users/users.component.html
+++ b/TiendaVirtual_SOA/src/app/dashboard/components/users/users.component.html
@@ -1,13 +1,47 @@
-<div style="padding: 2rem;">
-  <h2>👤 Lista de Usuarios</h2>
+<div class="container mt-4">
+  <div class="table-responsive">
+    <table class="table table-striped table-hover">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col" class="text-center">#</th>
+          <th scope="col" class="text-center">Nombre</th>
+          <th scope="col" class="text-center">Segundo Nombre</th>
+          <th scope="col" class="text-center">Email</th>
+          <th scope="col" class="text-center">Hora de inicio</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let user of todosLogins; let i = index">
+          <td class="text-center align-middle">{{ (currentPage - 1) * pageSize + i + 1 }}</td>
+          <td class="text-center align-middle">{{ user.firstName }}</td>
+          <td class="text-center align-middle">{{ user.lastName }}</td>
+          <td class="text-center align-middle">{{ user.email }}</td>
+          <td class="text-center align-middle">{{ user.createdAt | date: 'medium' }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
-  <ul *ngIf="usuarios.length > 0; else sinUsuarios">
-    <li *ngFor="let user of usuarios">
-      {{ user.firstName }} {{ user.lastName }} - {{ user.email }}
-    </li>
-  </ul>
+  <div *ngIf="todosLogins.length === 0" class="alert alert-info text-center">
+    No hay logins registrados
+  </div>
 
-  <ng-template #sinUsuarios>
-    <p>No hay usuarios registrados en Firestore.</p>
-  </ng-template>
+  <!-- Paginación -->
+  <div *ngIf="totalPages > 1" class="d-flex justify-content-center mt-3">
+    <nav aria-label="Navegación de páginas">
+      <ul class="pagination">
+        <li class="page-item" [class.disabled]="currentPage === 1">
+          <a class="page-link" role="button" tabindex="0" (click)="previousPage()">Anterior</a>
+        </li>
+        <li class="page-item active">
+          <span class="page-link">
+            Página {{ currentPage }} de {{ totalPages }}
+          </span>
+        </li>
+        <li class="page-item" [class.disabled]="currentPage === totalPages">
+          <a class="page-link" role="button" tabindex="0" (click)="nextPage()">Siguiente</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 </div>
