--- a/TiendaVirtual_SOA/src/app/dashboard/components/users/users.component.css
+++ b/TiendaVirtual_SOA/src/app/dashboard/components/users/users.component.css
@@ -276,3 +276,34 @@
   opacity: 0.5;
   cursor: not-allowed;
 }
+
+/*            */
+
+.header-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.button-group {
+  display: flex;
+  gap: 0.5rem; /* Ajustá si querés más/menos espacio entre botones */
+}
+
+@media (max-width: 600px) {
+  .header-section {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.75rem;
+  }
+
+  .button-group {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .btn-reload {
+    width: 100%;
+  }
+}
